welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not enough arguments for method growFlowers: (d: java.awt.Color)Unit.
Unspecified value parameter d.
	    growFlowers();
                       ^FlowerPot:7: error: not found: value fleur
fleur(Color.RED); 
^